VentaPoducto basic operations implemented